<resources>
    <string name="app_name">Mine天气</string>

    <string name="login">登录</string>
    <string name="hint_login_user">请输入账号</string>
    <string name="hint_login_pwd">请输入密码</string>
    <string name="hint_register_user">请输入手机号</string>
    <string name="hint_register_pwd">请输入密码</string>
    <string name="account">账号：</string>

    <string name="register">注册</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="get_code">获取验证码</string>
    <string name="hint_code">验证码</string>

    <string name="btn_next">下一步</string>
    <string name="pwd_error">密码错误！</string>
    <string name="login_succ">登录成功！</string>
    <string name="login_failed">登录失败！</string>
    <string name="register_succ">注册成功！</string>
    <string name="register_failed">注册失败！</string>
    <string name="clothe">穿衣指数--</string>
    <string name="sick">生病指数--</string>
    <string name="kongtiao">空调指数--</string>
    <string name="car">洗车指数--</string>
    <string name="sport">运动指数--</string>
    <string name="ziwaixian">紫外线指数--</string>
    <string name="pm">PM2.5--</string>

    <string name="mine">我的</string>
    <string name="collect">收藏的城市</string>
    <string name="mySetting">我的设置</string>
    <string name="about">关于我们</string>
    <string name="star">今日星座运势</string>

    <string name="load_error">加载失败！</string>
    <string name="load_succ">加载成功！</string>
    <string name="loading">正在加载...</string>

    <string name="yesterday">昨天</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>

    <string name="error_city">没有查询到该城市天气！</string>
    <string name="select_star">选择星座</string>
    <string name="my_city">我的城市</string>

    <array name="stars">
        <item>白羊座：Aries(3.21~4.20)</item>
        <item>金牛座：Taurus(4.21~5.21)</item>
        <item>双子座：Gemini(5.22~6.21)</item>
        <item>巨蟹座：Cancer(6.22~7.22)</item>
        <item>狮子座：Leo(7.23~8.23)</item>
        <item>处女座：Virgo(8.24~9.23)</item>
        <item>天秤座：Libra(9.24~10.23)</item>
        <item>天蝎座：Scorpion(10.24~11.22)</item>
        <item>射手座：Sagittarius(11.23~12.21)</item>
        <item>摩羯座：Capricorn(12.22~1.20)</item>
        <item>水瓶座：Aquarius(1.21~2.19)</item>
        <item>双鱼座：Pisces(2.20~3.20)</item>
    </array>

    <array name="star_name">
        <item>白羊座</item>
        <item>金牛座</item>
        <item>双子座</item>
        <item>巨蟹座</item>
        <item>狮子座</item>
        <item>处女座</item>
        <item>天秤座</item>
        <item>天蝎座</item>
        <item>射手座</item>
        <item>摩羯座</item>
        <item>水瓶座</item>
        <item>双鱼座</item>
    </array>
    <!--<string name="Aries">白羊座：Aries(3.21~4.20)</string>-->
    <!--<string name="Taurus">金牛座：Taurus(4.21~5.21)</string>-->
    <!--<string name="Gemini">双子座：Gemini(5.22~6.21)</string>-->
    <!--<string name="Cancer">巨蟹座：Cancer(6.22~7.22)</string>-->
    <!--<string name="Leo">狮子座：Leo(7.23~8.23)</string>-->
    <!--<string name="Virgo">处女座：Virgo(8.24~9.23)</string>-->
    <!--<string name="Libra">天秤座：Libra(9.24~10.23)</string>-->
    <!--<string name="Scorpion">天蝎座：Scorpion(10.24~11.22)</string>-->
    <!--<string name="Sagittarius">射手座：Sagittarius(11.23~12.21)</string>-->
    <!--<string name="Capricorn">摩羯座：Capricorn(12.22~1.20)</string>-->
    <!--<string name="Aquarius">水瓶座：Aquarius(1.21~2.19)</string>-->
    <!--<string name="Pisces">双鱼座：Pisces(2.20~3.20)</string>-->


</resources>
