<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:widget="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_register_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_bg_bored_color_black">

        <ImageView
            android:id="@+id/iv_register_user"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@mipmap/login_phone" />

        <com.jal.widget.EditTextWithDel
            android:id="@+id/et_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@id/iv_register_user"
            android:background="@null"
            android:hint="@string/hint_register_user"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="13sp" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/ll_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_bg_bored_color_black"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_code"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_register_pwd"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:src="@mipmap/code" />

            <com.jal.widget.EditTextWithDel
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_toEndOf="@id/iv_register_pwd"
                android:background="@null"
                android:hint="@string/hint_code"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="13sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_get_code"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_shape_login"
            android:gravity="center"
            android:text="@string/get_code"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_pwd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_bg_bored_color_black">

        <ImageView
            android:id="@+id/iv_pwd"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@mipmap/login_password" />

        <com.jal.widget.EditTextWithDel
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@id/iv_pwd"
            android:background="@null"
            android:hint="@string/hint_login_pwd"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="13sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_shape_login"
        android:text="@string/btn_next"
        android:textColor="@color/white"
        android:textSize="15sp" />


</LinearLayout>